--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -7,6 +7,7 @@
 @import "partials/variables";
 @import "partials/mixins";
 @import "modules/spinner";
+@import "modules/opacity";
 @import "apps/landing_header";
 
 body {
