--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,5 +8,9 @@
     = include_gon init: true
   %body
     #header-region
-    #main-region.container
-      = yield
+    .row
+      .col-md-4
+        #sidebar-region
+      .col-md-8
+        #main-region
+          = yield
