--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -4,6 +4,8 @@
 
 @import "settings/variables";
 
+@import "utilities/fonts";
+
 @import "modules/messenger";
 @import "modules/opacity";
 @import "modules/spinner";
