add backbone_app.coffee on landing layout

--- a/app/views/layouts/landing.haml
+++ b/app/views/layouts/landing.haml
@@ -4,6 +4,7 @@
     %title Miser Landing Page
     = stylesheet_link_tag    'landing', media: 'all'
     = javascript_include_tag 'application'
+    = javascript_include_tag 'backbone_app'
     = csrf_meta_tags
     = include_gon init: true
   %body
