remove 'move' cursor on box-name class

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -17,4 +17,4 @@
             #breadcrumb.col-xs-12
               %ol.breadcrumb
                 %li= link_to 'Home', '#'
-          #main-region
+          .row#main-region
