dataTables with bootstrap theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import "compass";
 @import "font-awesome";
-@import "bootswatch";
+@import "bootstrap";
 @import "devoops";
+@import "dataTables.bootstrap";
 
 @import "settings/variables";
 
