--- a/app/assets/javascripts/backbone/lib/views/_base/view.coffee.erb
+++ b/app/assets/javascripts/backbone/lib/views/_base/view.coffee.erb
@@ -11,6 +11,12 @@
       current_user:
         App.request('get:current_user')?.toJSON()
 
+      render_partial: (template, data = @) ->
+        return if template is false
+        path = @__getTemplate template
+        throw "Template #{template} not found!" unless path
+        path data
+
       assets: (source) ->
         @__url source
 
@@ -24,3 +30,13 @@
           @__assets()[path]
         else
           path
+
+      __getTemplate: (template) ->
+        for lookup in ['backbone/apps/', 'backbone/lib/concerns/']
+          for path in [template, @__withTemplate template]
+            return JST[lookup + path] if JST[lookup + path]
+
+      __withTemplate: (string) ->
+        array = string.split '/'
+        array.splice -1, 0, 'templates'
+        array.join '/'
