extract dataTables styles into module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,6 @@
 @import "modules/messenger";
 @import "modules/opacity";
 @import "modules/spinner";
+@import "modules/dataTables";
 
 @import "apps/header";
